--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,6 @@ a,a:hover{
 /* Banner Part Start */
 #Banner{
     padding: 1000px 0px;
-    background: #teal;
+    background: teal;
 }
 /* Banner Part Ends */
