--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ a,a:hover{
 /* Basic CSS Reset */
 
 /* Banner Part Start */
-#Banner{
-    padding: 1000px 0px;
+#banner{
+    padding: 100px 0px;
     background: teal;
+    height: 350px;
 }
 /* Banner Part Ends */
